cmake_minimum_required (VERSION 2.8)
PROJECT(MyTest)

SET(CMAKE_INSTALL_PREFIX /chicheng/cmaketest/usr/local)
if(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "-std=c++14 -g ${CMAKE_CXX_FLAGS}")
    message(STATUS "CXXFLAG at proj_root:" ${CMAKE_CXX_FLAGS})
endif(CMAKE_COMPILER_IS_GNUCXX)

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(lib libout)
ADD_SUBDIRECTORY(src bin)

#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
#SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INSTALL(FILES COPYRIGHT README DESTINATION share/doc/mytest)
INSTALL(PROGRAMS scripts/runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/mytest)
